--- a/package.json
+++ b/package.json
@@ -14,8 +14,18 @@
     "@angular/platform-server": "20.3.6",
     "@angular/router": "20.3.6",
     "@angular/ssr": "20.3.6",
+    "@stripe/stripe-js": "^8.5.3",
+    "@tensorflow-models/body-pix": "^2.2.1",
+    "@tensorflow-models/toxicity": "^1.2.2",
+    "@tensorflow/tfjs": "^4.22.0",
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
+    "firebase": "^12.6.0",
+    "firebase-admin": "^13.6.0",
     "rxjs": "~7.8.0",
+    "socket.io": "^4.8.1",
+    "stripe": "^20.0.0",
+    "systeminformation": "^5.27.13",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
@@ -66,6 +76,7 @@
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "22.0.0",
     "prettier": "^2.6.2",
+    "socket.io-client": "^4.8.1",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
