--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/build-angular": "20.3.6",
+    "@angular/animations": "20.3.6",
+    "@angular/cdk": "20.2.14",
     "@angular/common": "20.3.6",
     "@angular/compiler": "20.3.6",
     "@angular/core": "20.3.6",
     "@angular/forms": "20.3.6",
+    "@angular/material": "20.2.14",
     "@angular/platform-browser": "20.3.6",
     "@angular/platform-server": "20.3.6",
     "@angular/router": "20.3.6",
     "@angular/ssr": "20.3.6",
     "@stripe/stripe-js": "^8.5.3",
-    "@tensorflow-models/body-pix": "^2.2.1",
-    "@tensorflow-models/toxicity": "^1.2.2",
     "@tensorflow/tfjs": "^4.22.0",
     "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
